k8s/ingress-flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-flask
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: flask-app.local
    http:
      paths:
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000
